# TestGitActions

./: CMakeLists.txt  Memory.cpp  Memory.h  MemoryDebugger.cpp  MemoryDebugger.h  MyCRT.h  Project2Helper.h  README.md  StackWalker.cpp  StackWalker.h  main.cpp  mallocator.h  stdafx.h
.github/workflows/: WindowsBuild.yml  cmake.yml
